Fix a bug where the text would be invisible if not hovered Update styling

--- a/style.css
+++ b/style.css
@@ -225,6 +225,9 @@ a {
 
 .molecular-box {
     margin-top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 input {
@@ -239,26 +242,32 @@ input[type="text"] {
     height: 40px;
     padding: 10px;
     font-size: 24px;
-    color: #1e1d38;
-}
-
-input[type="submit"] {
-    border-radius: 14px;
-    font-size: 18px;
-    margin-left: 10px;
-    height: 64px;
-    padding: 10px;
-}
-
-input[type="submit"]:hover {
-    transform: scale(1.04);
-    background-color: #E0C3FC;
-    color: #0a0922;
-    cursor: pointer;
+    color: white;
 }
 
 input[type="text"]:hover {
     transform: scale(1.05);
     border: 3px solid #0a0922;
     background-color: #E0C3FC;
+    color: #1e1d38;
+}
+
+#calculate-button {
+    transition: all 0.3s ease;
+    border: 0px solid transparent;
+    background-color: #1e1d38;
+    color: white;
+    border-radius: 14px;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 10px;
+    height: 64px;
+    padding: 10px;
+}
+
+#calculate-button:hover {
+    transform: scale(1.04);
+    background-color: #E0C3FC;
+    color: #0a0922;
+    cursor: pointer;
 }
